# trivia_question

./: .gitignore  README.md  app.py  database_connector.py  pyproject.toml  trivia_question.py
.github/workflows/: python-package.yml
src/: app.py  database_connector.py  trivia_question.py
